--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "lucide-react": "^0.344.0",
-    "@google/genai": "^0.0.1",
+    "@google/generative-ai": "^0.21.0",
     "clsx": "^2.1.0",
     "tailwind-merge": "^2.2.1"
   },
